--- a/Factory/Views/Engineers/AddLocation.cshtml
+++ b/Factory/Views/Engineers/AddLocation.cshtml
@@ -2,7 +2,7 @@
   Layout = "_Layout";
 }
 
-@model Factory.Models.Artist
+@model Factory.Models.Engineer
 
 <h2>Add Location to @Html.DisplayFor(model => model.Name)</h2>
 
