Add Delete, AddMachine, and AddEngineer Views for Locations

--- a/Factory/Views/Locations/Create.cshtml
+++ b/Factory/Views/Locations/Create.cshtml
@@ -20,5 +20,5 @@
   <input type="submit" value="Add Location" />
 }
 
-<p>@Html.ActionLink("Engineer List", "Index")</p>
+<p>@Html.ActionLink("Location List", "Index")</p>
 <p>@Html.ActionLink("Home", "Index", "Home")</p>
