--- a/Factory/Views/Locations/AddEngineer.cshtml
+++ b/Factory/Views/Locations/AddEngineer.cshtml
@@ -2,7 +2,7 @@
   Layout = "_Layout";
 }
 
-@model Factory.Models.location
+@model Factory.Models.Location
 
 <h2>Add Engineer to @Html.DisplayFor(model => model.Name)</h2>
 
