--- a/Factory/Views/Locations/AddMachine.cshtml
+++ b/Factory/Views/Locations/AddMachine.cshtml
@@ -2,7 +2,7 @@
   Layout = "_Layout";
 }
 
-@model Factory.Models.location
+@model Factory.Models.Location
 
 <h2>Add Machine to @Html.DisplayFor(model => model.Name)</h2>
 
