Fix bugs in Create View for Machines

--- a/Factory/Views/Machines/Create.cshtml
+++ b/Factory/Views/Machines/Create.cshtml
@@ -12,7 +12,7 @@
   @Html.TextBoxFor(model => model.Name)
 
   @Html.LabelFor(model => model.Description)
-  @Html.TextBoxFor(model => model.Desription)
+  @Html.TextBoxFor(model => model.Description)
 
   @Html.Label("Add an Engineer To This Machine: ")
   @Html.DropDownList("EngineerId", (SelectList)ViewBag.EngineerId, " ")
