--- a/Factory/Views/Shared/_Layout.cshtml
+++ b/Factory/Views/Shared/_Layout.cshtml
@@ -10,6 +10,39 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg navbar navbar-dark bg-primary">
+    <a class="navbar-brand" href="/">Factory</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/Machines">Machines</a>
+        </li>
+          <li class="nav-item">
+          <a class="nav-link" href="/Locations">Locations</a>
+        </li>
+        </li>
+          <li class="nav-item">
+          <a class="nav-link" href="/Engineers">Engineers</a>
+        </li>
+      </ul>
+      <form class="form-inline my-2 my-lg-0" action="/" method="post">
+        <select name="searchOption" id="searchOption">
+          <option value="engineers">Search Engineers</option>
+          <option value="locations">Search Locations</option>
+          <option value="machines">Search Machines</option>
+        </select>
+        <input name="searchString" id="searchString" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
+      </form>
+    </div>
+  </nav>
     <div class="container">
       <div class="page-header">
         <h1>Factory Repair Page</h1>
