--- a/Factory/Views/Machines/Edit.cshtml
+++ b/Factory/Views/Machines/Edit.cshtml
@@ -14,7 +14,7 @@
   @Html.TextBoxFor(model => model.Name)
 
   @Html.LabelFor(model => model.Description)
-  @Html.TextBoxFor(model => model.Desription)
+  @Html.TextBoxFor(model => model.Description)
 
   <input type="submit" value="Save" />
 }
