--- a/Factory/Views/Shared/_Layout.cshtml
+++ b/Factory/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
           <option value="machines">Search Machines</option>
         </select>
         <input name="searchString" id="searchString" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
+        <button class="btn btn-info" type="submit">Search</button>
       </form>
     </div>
   </nav>
