Add data seeding for location name and machine name

--- a/Factory/Views/Machines/Details.cshtml
+++ b/Factory/Views/Machines/Details.cshtml
@@ -10,7 +10,7 @@
 <h3>@Html.DisplayNameFor(model => model.Name): @Html.DisplayFor(model => model.Name)</h3>
 <h4>Description: @Html.DisplayFor(model => model.Description)</h4>
 
-@if(@Model.Status == true)
+@if(@Model.Complete == true)
 {
   <h4>Status: Complete</h4>
 }
