--- a/Factory/Views/Machines/Edit.cshtml
+++ b/Factory/Views/Machines/Edit.cshtml
@@ -16,8 +16,8 @@
   @Html.LabelFor(model => model.Description)
   @Html.TextBoxFor(model => model.Description)
 
-  @Html.LabelFor(model => model.Status)
-  @Html.CheckBox("Status", false)
+  @Html.LabelFor(model => model.Complete)
+  @Html.CheckBox("Complete", false)
 
   <input type="submit" value="Save" />
 }
