--- a/Factory/Views/Machines/Index.cshtml
+++ b/Factory/Views/Machines/Index.cshtml
@@ -14,7 +14,7 @@
 @foreach(Machine machine in Model)
 {
   <li>@Html.ActionLink($"{machine.Name}", "Details", new {id = machine.MachineId})</li>
-  @if(@machine.Status == true)
+  @if(@machine.Complete == true)
   {
     <p>completed</p>
   }
