Add display for date inspected

--- a/Factory/Views/Machines/Details.cshtml
+++ b/Factory/Views/Machines/Details.cshtml
@@ -9,6 +9,7 @@
 <hr />
 <h3>@Html.DisplayNameFor(model => model.Name): @Html.DisplayFor(model => model.Name)</h3>
 <h4>Description: @Html.DisplayFor(model => model.Description)</h4>
+<h4>Date Inspected: @Html.DisplayFor(model => model.InspectionDate)</h4>
 
 @if(@Model.Complete == true)
 {
