--- a/Factory/Views/Machines/Create.cshtml
+++ b/Factory/Views/Machines/Create.cshtml
@@ -14,6 +14,9 @@
   @Html.LabelFor(model => model.Description)
   @Html.TextBoxFor(model => model.Description)
 
+  @Html.LabelFor(model => model.InspectionDate)
+  @Html.TextBoxFor(model => model.InspectionDate, new {@type = "date"})
+
   @Html.Label("Add an Engineer To This Machine: ")
   @Html.DropDownList("EngineerId", (SelectList)ViewBag.EngineerId, " ")
 
